Added personal website link

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,9 +31,9 @@
     <footer>
       <div class="container">
         Made with&nbsp;<span style="color: #e25555">&hearts;</span
-        >&nbsp;by&nbsp;<a href="#">Brey Rivera</a>&nbsp;&&nbsp;<a href="#"
-          >Cole Baugh</a
-        >
+        >&nbsp;by&nbsp;<a href="https://breyr.dev" target="_blank"
+          >Brey Rivera</a
+        >&nbsp;&&nbsp;<a href="#">Cole Baugh</a>
       </div>
     </footer>
 
